# python_project_14

./: .coverage  .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
src/: base_product.py  lawn_grass.py  main.py  print_mixin.py  product.py  smartphone.py
tests/: conftest.py  test_lawngrass.py  test_main.py  test_print_mixin.py  test_product.py  test_smartphone.py
