[tool.poetry]
name = "python-project-14-1"
version = "0.1.0"
description = ""
authors = ["Анна Кочерыгина <annvikky@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.11.2"
black = "^24.10.0"
isort = "^5.13.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tools.black]
# максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = 'venv'

[tool.isort]
# максимальная длина строки
line_length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


#nose = "^1.3.7"
#pandas = "^2.2.3"
#openpyxl = "^3.1.5"
